--- a/src/main/resources/application-test.properties
+++ b/src/main/resources/application-test.properties
@@ -19,11 +19,12 @@
 
 spring.application.name=testify
 
-spring.datasource.url=jdbc:postgresql://localhost:5432/testify
-spring.datasource.username=postgres
-spring.datasource.password=docker
+spring.datasource.url=jdbc:h2:mem:testdb;DB_CLOSE_DELAY=-1;DB_CLOSE_ON_EXIT=FALSE
+spring.datasource.driver-class-name=org.h2.Driver
+spring.datasource.username=sa
+spring.datasource.password=
 
-spring.jpa.database-platform=org.hibernate.dialect.PostgreSQLDialect
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
-spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
 spring.liquibase.enabled=true
+spring.liquibase.change-log=classpath:db/changelog/changelog-master.xml
